--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,8 +42,8 @@
     .container.header
       .header-base
         %header
-          %span.seal-pres.pull-left
-            pres seal
+          %span.seal-nsf.pull-left
+            nsf logo
           %span.seal-nsf.pull-right
             nsf logo
           %h1
