--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,9 +42,9 @@
     .container.header
       .header-base
         %header
-          %span.seal-nsf.pull-left
+          %span.seal-nsf.seal-left.pull-left
             nsf logo
-          %span.seal-nsf.pull-right
+          %span.seal-nsf.seal-right.pull-right
             nsf logo
           %h1
             = link_to "Portfolio Explorer", root_path
