Upading header, adding functionality to allow users to select a division

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -59,7 +59,7 @@ var App = {
 	"OGC":"Office of the General Counsel",
 	"OIA":"Office of Integrative Activities",
 	"OISE":"Office of International Science and Engineering",
-	"ODI":"Office of Diversity and Inclusion (ODI)",
+	"ODI":"Office of Diversity and Inclusion",
 	"OLPA":"Office of Legislative & Public Affairs",
 	"ANT":"Antarctic Sciences",
 	"ARC":"Arctic Sciences",
