Changed home page text

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -644,3 +644,7 @@ margin: 0;
 #divisions_select_table tbody tr:hover {
 	cursor: pointer;
 }
+
+#divisions_select_table_filter {
+	float: right;
+}
