Changes for DOD Demo

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,9 +1,14 @@
 html { overflow-y: scroll; }
 
 body {
-  background: #d2d2d2;
+  background: #505359 url('bkgd-repeat.png') repeat-x 0 0;
   font-size: 12px;
   line-height: 16px;
+  color: #d6d6d6;
+}
+
+a {
+	color: #febe1c;
 }
 
 .text-left { text-align: left;}
@@ -25,7 +30,7 @@ iframe {
 }
 
 .content {
-background: #fff;
+background: #2A2A2A;
 padding: 15px;
 min-height: 500px;
 }
@@ -59,15 +64,31 @@ margin-bottom: 10px;
 .ui-widget-content .ui-state-default, 
 .ui-widget-header .ui-state-default {
     background: none;
-    color: #333;
+    color: #d6d6d6;
     border: none;
 }
 
 .ui-widget-header {
     background: none;
     border: none;
-    color: #333;
+    color: #d6d6d6;
     font-weight: bold;
+}
+
+th.ui-state-default {
+	color: #d6d6d6;
+}
+
+button.ui-state-default {
+	color: #333 !important;
+}
+
+.ui-toolbar label {
+	color: #d6d6d6;
+}
+
+.ui-toolbar .ui-state-default {
+	color: #333 !important;
 }
 
 .ui-icon {
@@ -82,7 +103,7 @@ margin: 0 auto;
 	position: absolute;
 	top: 10px;
 	right: 10px;
-	color: #2d4d85;
+	color: #d6d6d6;
 	font-weight: bold;
 }
 
@@ -282,7 +303,7 @@ margin-bottom: 20px;
 
 .page-header h1 {
 font-size: 26px;
-color: #334779;
+color: #99cc66;
 }
 
 .page-header h2 {
@@ -293,24 +314,41 @@ h2 {
 font-size: 18px;
 line-height: 19px;
 margin-bottom: 20px;
+color: #d6d6d6;
 }
 
 h3 {
 font-size: 16px;
 margin-bottom: 5px;
-color: #c66a28;
+color: #d6d6d6;
 }
 
 h4 {
-color: #334779;
+color: #d6d6d6;
 }
 
 h5 {
 font-size: 14px;
 font-weight: bold;
-color: #666;
+color: #d6d6d6;
 }
 
+label {
+    color: #d6d6d6;
+}
+
+.table-header-controls label,
+.table-header-controls {
+	color: #333;
+}
+
+#division_summary h3 {
+	color: #333;
+}
+
+.well {
+	color: #333;
+}
 /*
 --------------------------------------------------------------------------------------- TABS
 */
@@ -363,6 +401,29 @@ text-align: right;
     width: 120px;
 }
 
+.table-striped tbody tr:nth-child(2n+1) td, .table-striped tbody tr:nth-child(2n+1) th {
+    background-color: #383838;
+}
+
+.table-bordered th + th, 
+.table-bordered td + td,
+.table-bordered th + td,
+.table-bordered td + th,
+.table th,
+.table td {
+    border-left: none;
+	border-top: none;
+	border: 1px solid #333;
+}
+
+.table-bordered,
+.table {
+	border: none;
+}
+
+.dataTables_filter label {
+	color: #d6d6d6;
+}
 /*
 --------------------------------------------------------------------------------------- REVIEWER DETAILS PAGE
 */
@@ -467,7 +528,7 @@ float: right;
   padding: 4px 10px 4px;
   font-size: 13px;
   line-height: 18px;
-  color: #333333;
+  color: #d6d6d6;
   text-align: center;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   background-color: #fafafa;
@@ -510,7 +571,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deefff', end
 .dataTables_paginate .paginate_button_disabled,
 .dataTables_paginate .paginate_disabled_previous,
 .dataTables_paginate .paginate_disabled_next {
-color: #ccc;
+color: #d6d6d6;
 cursor: default;
 }
 
@@ -527,7 +588,7 @@ cursor: default;
 
 .table-header-controls {
 margin-bottom: 20px;
-border: 1px solid #ccc;
+border: 1px solid #d6d6d6;
 background: #f1f1f1;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
@@ -600,13 +661,13 @@ padding: 0;
 }
 
 #topics_divisions_summary .nav-list li, #proposal_summary .nav-list li {
-color: #000;
+color: #333;
 font-weight: normal;
 padding-left: 10px;
 }
 
 #topics_divisions_summary .nav-list .nav-header, #proposal_summary .nav-list .nav-header {
-color: #C66A28;
+color: #333;
 margin: 10px 0 0 0;
 padding: 0;
 font-weight: bold;
@@ -615,6 +676,10 @@ font-weight: bold;
 #topics_divisions_summary .nav-list .nav-header span, #proposal_summary .nav-list .nav-header span {
 font-weight: normal;
 color: #333;
+}
+
+#topics_divisions_summary h4 {
+	color: #333;
 }
 
 /*
