--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <h1>Welcome</h1>
 </div>
 <p>Welcome to the internal N.S.F prototype of the Portfolio Explorer.</p>
-<p>This tool provides users with information about Divisional and Program funding at NSF. Users can utilize Research Topics (based on Topic Modeling) to compare funding activity by different NSF entities.</p>
+<p>This tool provides users with information about <a href="dashboard#programs">Divisional and Program</a> funding at NSF. Users can utilize Research Topics (based on Topic Modeling) to compare funding activity by different NSF entities.</p>
 <p><strong>To begin, please choose a Division from the list to the right.</strong></p>
 </div>
 </div>
