--- a/app/assets/stylesheets/custom-rl.scss
+++ b/app/assets/stylesheets/custom-rl.scss
@@ -5,8 +5,8 @@
   }
   .right-side {
     padding: 30px;
-    border-left: 1px solid darken(#fff, 15%);
-    background: darken(#fff, 1%);
+    /* border-left: 1px solid darken(#fff, 15%);
+    background: darken(#fff, 1%); */
     input {
       margin-bottom: 10px;
     }
