--- a/public/assets/templates/research/topics_divisions.html
+++ b/public/assets/templates/research/topics_divisions.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="span9">
-		<h3>Topic Synergies for: t{{topicid}} - <span style="color:#000;">{{words}}</span></h3>
+		<h3>Topic Synergies for: t{{topicid}} - <span>{{words}}</span></h3>
 		<div class="row">
 		<div class="span9 table-header-controls">
 		<form class="form-inline">
